Modified thumbnail size to fixed to align captions and rating

--- a/Module-4-Security-Routing/imageshare/client/main.css
+++ b/Module-4-Security-Routing/imageshare/client/main.css
@@ -16,7 +16,7 @@ body {
 }
 
 .mt-thumb-image {
-   max-height: 250px;
+   height: 225px;
 }
 
 .mt-delete-button {
